tests/contract_testcases/substrate/inheritance/test_super.sol
contract super {}
// ---- Expect: diagnostics ----
// error: 1:10-15: 'super' shadows name of a builtin
